work but not finished

--- a/srcs/.env
+++ b/srcs/.env
@@ -9,3 +9,4 @@ MYSQL_USER=tweimer
 MYSQL_PASSWORD=root4life
 DB_HOST=mariadb:3306
 DB_HOSTNAME=mariadb:3306
+WEBSITE_FOLDER=/var/www/tweimer.42.fr/html
