--- a/srcs/requirements/nginx/Dockerfile2
+++ b/srcs/requirements/nginx/Dockerfile2
@@ -7,17 +7,17 @@ LABEL description="NGINX Container"
 
 # update the platform if needed
 RUN apk update && apk upgrade\
-# installing nginx and openssl
 	&& apk add nginx openssl\
-# creating a self signed certificate
-	&& openssl req -newkey rsa:4096 -x509 -sha256 -days 365 -nodes\
-		-out /etc/ssl/nginx.pem\
-		-keyout /etc/ssl/nginx.key\
-		-subj "/C=CH/ST=Vaud/L=Lausanne/O=wordpress/CN=$DOMAIN_NAME";
+	mkdir -p /etc/nginx/sites-available/tweimer.42.fr
 
-# replace nginx config file
+# replace the config file by a custom one
 COPY conf/my_nginx.conf /etc/nginx/http.d/my_nginx.conf
 
 EXPOSE 443
+
+RUN openssl req -newkey rsa:4096 -x509 -sha256 -days 365 -nodes \
+		-out /etc/ssl/nginx.pem \
+		-keyout /etc/ssl/nginx.key \
+		-subj "/C=CH/ST=Vaud/L=Lausanne/O=wordpress/CN=$DOMAIN_NAME";
 
 CMD ["nginx", "-g", "daemon off;"]
