--- a/srcs/requirements/nginx/conf/nginx copy.conf
+++ b/srcs/requirements/nginx/conf/nginx copy.conf
@@ -7,7 +7,7 @@ server {
     # listen [::]:80 default_server;# ssl;
 
 	error_log stderr;
-	root /var/www/wordpress;
+	root /var/www/tweimer.42.fr/html;
 	index index.php index.html index.htm;
 	server_name tweimer.42.fr;
 
