--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -6,26 +6,25 @@ LABEL description="Wordpress Container"
 #----------------------------------------------------------------------
 
 # update the platform if needed
-RUN apk update && apk upgrade
-
-#installing php
-RUN apk add php7-fpm php7 php-phar php-mysqli php7-json
-
-#installing wordpress
-RUN	mkdir -p /var/www && chmod 777 /var/www\
+RUN apk update && apk upgrade\
+# installing php
+	&& apk add php7-fpm php7 php-phar php-mysqli php7-json\
+# installing wordpress
 	&& wget http://wordpress.org/latest.tar.gz\
-	&& wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar\
-	&& chmod +x wp-cli.phar\
-	&& mv wp-cli.phar /usr/local/bin/wp\
+# extracting wordpress
 	&& tar -xzvf latest.tar.gz\
-	&& mv wordpress /var/www
+# creating folder website
+	&& mkdir -p /var/www/tweimer.42.fr/html/\
+# moving wordpress contents into its folder
+	&& mv wordpress/* /var/www/tweimer.42.fr/html/
+
+# replacing wordpress config file
+COPY conf/wp-config.php wp-config.php
+
+# replacing a php config file
+COPY conf/www.conf /etc/php7/php-fpm.d/www.conf
+COPY conf/wordpress.sh wordpress.sh
 
 EXPOSE 9000
 
-# replace the config file by a custom one
-RUN  rm -f /var/www/wordpress/wp-include/wp-config.php /etc/php7/php-fpm.d/www.conf
-COPY conf/wp-config.php /var/www/wordpress/wp-config.php
-COPY conf/www.conf /etc/php7/php-fpm.d/www.conf
-# wp plugin install [plugin] --activate
-
-CMD ["/usr/sbin/php-fpm7", "-F"]
+CMD ["sh", "wordpress.sh"]
