--- a/srcs/requirements/nginx/conf/my_nginx.conf
+++ b/srcs/requirements/nginx/conf/my_nginx.conf
@@ -3,12 +3,13 @@ server {
    	listen 443 ssl http2;
 	listen [::]:443 ssl http2;
 
-	root		/var/www/wordpress;
+	root		/var/www/tweimer.42.fr/html;
 	index		index.php index.html index.htm;
 	server_name tweimer.42.fr;
 
 	ssl_certificate_key /etc/ssl/nginx.key;
     ssl_certificate /etc/ssl/nginx.pem;
+	ssl_protocols TLSv1.2 TLSv1.3;
 
    location / {
 	try_files $uri $uri/ /index.php?$args;
