--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,6 @@
 DOMAIN_NAME=tweimer.42.fr
-# certificates
-# CERTS=/etc/ssl/certs/nginx.crt
-# KEY=/etc/ssl/private/nginx.key
-# MYSQL SETUP
+CERT=/etc/ssl/certs/nginx.crt
+KEY=/etc/ssl/nginx.key
 DATABASE_NAME=website
 MYSQL_ROOT_PASSWORD=42school
 MYSQL_USER=tweimer
@@ -10,3 +8,4 @@ MYSQL_PASSWORD=root4life
 DB_HOST=mariadb:3306
 DB_HOSTNAME=mariadb:3306
 WEBSITE_FOLDER=/var/www/tweimer.42.fr/html
+SERVER_NAME=tweimer.42.fr
