--- a/srcs/requirements/nginx/conf/my_nginx.conf
+++ b/srcs/requirements/nginx/conf/my_nginx.conf
@@ -1,24 +1,23 @@
 server {
-	
-   	listen 443 ssl http2;
+   	listen 443 		ssl http2;
 	listen [::]:443 ssl http2;
 
-	root		/var/www/tweimer.42.fr/html;
-	index		index.php index.html index.htm;
-	server_name tweimer.42.fr;
+	ssl_protocols		TLSv1.2;
+	ssl_certificate		CERT;
+	ssl_certificate_key	KEY;
 
-	ssl_certificate_key /etc/ssl/nginx.key;
-    ssl_certificate /etc/ssl/nginx.pem;
-	ssl_protocols TLSv1.2 TLSv1.3;
-
-   location / {
-	try_files $uri $uri/ /index.php?$args;
+	index			index.php index.html index.htm;
+	root			WEBSITE_FOLDER;
+	server_name 		SERVER_NAME;
+	
+	location / {
+	try_files	$uri $uri/ /index.php?$args;
 	}
 	
-    location ~ \.php$ {
-		include fastcgi_params;
-		fastcgi_index     index.php;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_pass wordpress:9000;
+	location ~ \.php$ {
+		include		fastcgi_params;
+		fastcgi_index	index.php;
+		fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_pass	wordpress:9000;
 	}
 }
