--- a/srcs/.env
+++ b/srcs/.env
@@ -5,6 +5,8 @@ DATABASE_NAME=website
 MYSQL_ROOT_PASSWORD=42school
 MYSQL_USER=tweimer
 MYSQL_PASSWORD=root4life
+SECOND_USER=John
+SECOND_USER_PASSWORD=John
 DB_HOST=mariadb:3306
 DB_HOSTNAME=mariadb:3306
 WEBSITE_FOLDER=/var/www/tweimer.42.fr/html
